@@ -18,7 +18,7 @@ LIB_PATCHLEVEL=0
 
 dnl libout123
 OUTAPI_VERSION=4
-OUTLIB_PATCHLEVEL=5
+OUTLIB_PATCHLEVEL=6
 
 dnl libsyn123
 SYNAPI_VERSION=1
